--- a/Document/00_Intro Pages/01_Title.tex
+++ b/Document/00_Intro Pages/01_Title.tex
@@ -6,7 +6,26 @@
 
 \vspace*{-1cm}
 
-\textbf{\Large Aplicación de modelos de lenguaje para la identificación de emociones en Twitter durante las elecciones presidenciales de 2022 en Colombia}\\[10pt]
+
+\begin{figure}[h]
+	\begin{center}
+		\subfloat{{\includegraphics[scale=1.2]{Images & Logos/596px-Logo-fcenuba.png} }}%
+		%
+	\end{center}
+\end{figure}
+
+\vspace*{1cm}
+
+{\bf\large Universidad de Buenos Aires} \\[10pt]
+{\large Facultad de Ciencias Exactas y Naturales}\\%[4pt]
+{\large Departamento de Ciencias de la Computación}\\%[8pt]
+
+
+\vspace*{1cm}
+
+\textbf{\Large Identificación de emociones en Twitter durante el proceso electoral
+	de 2022 en Colombia
+}\\[10pt]
 
 \vspace*{0.5cm}
 
@@ -22,29 +41,20 @@ Tesis presentada para optar por el titulo de\\
                       \vspace{10mm}
                    {\em  por} \\ \vspace{3mm}
              {\large \bf Juan Jose Iguaran Fernandez} \\
+             
+\begin{flushleft}
+	Director: Dr. Juan Manuel Pérez\\
+	Codirector: Dr. Germán Rosati\\
+	\vspace*{1cm}
+	Buenos Aires, Septiembre del 2023
+\end{flushleft}
 
 
 \vspace*{10mm}
 
-\begin{figure}[h]
-  \begin{center}
-  \subfloat{{\includegraphics[scale=0.55]{Images & Logos/data_mining.png} }}%
-  \subfloat{{\includegraphics[scale=0.18]{Images & Logos/uba.png}
-   }}
-  %
-  \end{center}
-\end{figure}
 
 \vspace*{10mm}
 
-
-{\bf\large Universidad de Buenos Aires} \\[10pt]
-{\bf\large Facultad de Ciencias Exactas y Naturales}\\%[4pt]
-
-
-
-{\bf\large Departamento de Ciencias de la Computación}\\%[8pt]
-{\it\large [Insert Month and Year]}
 
 \end{center}
 
