--- a/Document/00_Intro Pages/04_Acknowledgements.tex
+++ b/Document/00_Intro Pages/04_Acknowledgements.tex
@@ -6,9 +6,14 @@
 
 
 \noindent
- Agradezco
+ Quiero agradecer a la Maestría por todo el conocimiento y la formación brindada sin los cuales cual este trabajo no habría sido posible. Agradezco también a mis directores por todo su apoyo, paciencia y mentoría a lo largo de este proceso.
+ 
+ A Luis Felipe Nuñez, cuyas valiosa palabras  ''Tomate en serio'' forjaron mi motivación. A Jaime Diaz, gracias a quien pude iniciar este viaje y estuvo presente de muchas formas. A Carolina Franco cuyo afecto, apoyo y acompañamiento fueron claves durante este proceso, y a Judith Fernandez, la autora de mi vida.
+ 
+
 
 \vspace{4cm} %Reduce if text overflowing to a new page
+
 
 
 \clearpage
