--- a/Document/00_Intro Pages/05_Abstract.tex
+++ b/Document/00_Intro Pages/05_Abstract.tex
@@ -4,9 +4,14 @@
 \end{center}
 
 
-El estudio de Twitter como medio para el análisis de fenómenos sociales mediante técnicas de procesamiento del lenguaje natural (NLP) es de gran interés. Dentro de estas técnicas, la detección de emociones en el texto es especialmente relevante , ya que permite identificar la respuesta subjetiva de las personas ante los eventos sociales. Los modelos de lenguaje basados en redes neuronales, como los Transformers y específicamente BERT, han reemplazado las técnicas tradicionales de NLP debido a su capacidad para capturar el contexto y las relaciones entre las palabras en el texto. Sin embargo, en español, hay pocos estudios de detección de emociones en redes sociales y ninguno que utilice modelos de lenguaje basados en Transformers en un contexto político. Este trabajo tiene como objetivo emplear modelos basados en BERT para detectar emociones en Twitter durante las elecciones presidenciales de Colombia en 2022. Se utilizará una base de datos de tweets descargados a través de la API, etiquetados manualmente con emociones y se realizará un fine tuning de varios modelos de lenguaje preentrenados para seleccionar el mejor. Este modelo se utilizará para clasificar toda la base de datos y analizar la respuesta emocional de los tweets asociados a sectores políticos y su variación temporal.
+El estudio de Twitter como medio para el análisis de fenómenos sociales mediante técnicas de procesamiento del lenguaje natural (NLP) ha generado gran interés en los últimos años debido a la disponibilidad de grandes cantidades de datos en un ambiente relativamente espontáneo. Dentro de estas técnicas, la detección de emociones en el texto es especialmente relevante, ya que permite identificar la respuesta subjetiva de las personas ante los distintos eventos sociales presentados. Los modelos de lenguaje basados en redes neuronales, como los Transformers y específicamente BERT, han reemplazado las técnicas tradicionales de NLP debido a su capacidad para capturar el sentido y las relaciones entre las palabras en el texto. Sin embargo, en español hay pocos estudios de detección de emociones en redes sociales y ninguno que utilice modelos de lenguaje basados en Transformers en un contexto político.
+
+
+El objetivo del trabajo fue utilizar modelos basados en BERT para detectar emociones en Twitter durante las elecciones presidenciales de Colombia en 2022, etiquetando manualmente un conjunto de tweets y realizando experimentos de clasificación con modelos pre-entrenados en español. Los resultados de predicción de los modelos sirvieron para analizar las respuestas emocionales de los usuarios, asociando los tweets a sectores políticos, así como la variación temporal. Se encontró una mayor presencia de las emociones asco y alegría en los tweets etiquetados manualmente, lo que resultó en un mejor rendimiento de los modelos en tweets etiquetados con estas emociones. Además, el modelo RoBERTuito se destacó en su desempeño en todas las emociones debido a su pre entrenamiento específico para tweets en español. También se observó que los tweets asociados a la derecha expresaba más asco, mientras que aquellos asociados a la izquierda mostraban más alegría, y que los días con eventos políticos relevantes generaban más etiquetas emocionales.
+
+
 
 \vspace{4cm} % Reduce if text overflowing to a new page. Don't make it too long.
-\textbf{Palabras Clave:} [BERT, Colombia, Elecciones, Detección de emociones]
+\textbf{Palabras Clave:} [BERT, NLP, Colombia, Elecciones, Detección de emociones]
 
 \clearpage
