--- a/Document/Appendix/appendix1.tex
+++ b/Document/Appendix/appendix1.tex
@@ -1,9 +1,11 @@
 \begin{appendices}
-	\chapter{bla}
-	\section{Anexos} 
 	
+	\chapter{Anexos}
 
+	
+	\scriptsize
 	\input{tables/trendings_clean.tex}
+
 	
 
 
