--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -497,3 +497,44 @@
 	year={2015},
 	publisher={Elsevier}
 }
+
+
+@book{vandenbos2007apa,
+	title={APA dictionary of psychology.},
+	author={VandenBos, Gary R},
+	year={2007},
+	publisher={American Psychological Association}
+}
+
+@article{cho2014learning,
+	title={Learning phrase representations using RNN encoder-decoder for statistical machine translation},
+	author={Cho, Kyunghyun and Van Merri{\"e}nboer, Bart and Gulcehre, Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
+	journal={arXiv preprint arXiv:1406.1078},
+	year={2014}
+}
+
+
+@book{jurafsky2000speech,
+	title={Speech \& language processing},
+	author={Jurafsky, Dan},
+	year={2000},
+	publisher={Pearson Education India}
+}
+
+@article{loshchilov2017decoupled,
+	title={Decoupled weight decay regularization},
+	author={Loshchilov, Ilya and Hutter, Frank},
+	journal={arXiv preprint arXiv:1711.05101},
+	year={2017}
+}
+
+@article{fleiss1971measuring,
+	title={Measuring nominal scale agreement among many raters.},
+	author={Fleiss, Joseph L},
+	journal={Psychological bulletin},
+	volume={76},
+	number={5},
+	pages={378},
+	year={1971},
+	publisher={American Psychological Association}
+}
