--- a/Document/tables/agreements.tex
+++ b/Document/tables/agreements.tex
@@ -1,13 +1,13 @@
-\begin{table}
-\caption{Indice de Fleiss Kappa en cada emocion}
-\label{table:agreements}
+\begin{table}[t]
 \centering
 \begin{tabular}{lllll}
 \toprule
  & alegria & miedo & tristeza & asco \\
 \midrule
 Cantidad de Tweets & 464 & 98 & 103 & 580 \\
-Indice de Fleiss Kapp & 0.69 & 0.47 & 0.4 & 0.62 \\
+Indice de Fleiss $\kappa$ & 0.69 & 0.47 & 0.4 & 0.62 \\
 \bottomrule
 \end{tabular}
+\caption{Cantidad de tweets etiquetados e indice de Fleiss Kappa en cada emoción}
+\label{table:agreements}
 \end{table}
