--- a/Document/tables/emotions_table.tex
+++ b/Document/tables/emotions_table.tex
@@ -17,16 +17,16 @@ Emoción & Descripción \\
 \endlastfoot
 Admiración & La admiración es una emoción social que se siente al observar a personas de competencia, talento o habilidad que superan los estándares. La admiración facilita el aprendizaje social en grupos. La admiración motiva la superación personal a través del aprendizaje de los modelos a seguir. \\
 Agrado & Sensación moderada de felicidad o placer que siente una persona por algo que le gusta. \\
-Confianza & La confianza es la voluntad de una parte (el fideicomitente) de volverse vulnerable a otra parte (el fideicomisario) bajo la presunción de que el fideicomisario actuará de manera que beneficie al fideicomitente. Además, el fideicomitente no tiene control sobre las acciones del fiduciario. Los académicos distinguen entre la confianza generalizada (también conocida como confianza social), que es la extensión de la confianza a un círculo relativamente grande de personas desconocidas, y la confianza particularizada, que depende de una situación específica o una relación específica. \\
-Alegría & Es una emoción positiva que suele ir acompañada de bienestar y alegría. Se genera como resultado de un evento positivo. Se diferencia de la confianza en el grado de entusiasmo y gratitud manifestado por el autor. \\
+Confianza & La confianza implica que una parte se vuelve vulnerable ante otra, asumiendo que esta actuará en su beneficio.En una relación de confianza, el que confía no controla las acciones del otro. \\
+Alegría & Es una emoción positiva que suele ir acompañada de bienestar. Se genera como resultado de un evento positivo. \\
 Incertidumbre & La incertidumbre es la falta de seguridad, de confianza o de certeza sobre algo. Aparece en situaciones en las que no tenemos control total, en las que nos faltan respuestas e información, y nos puede generar inquietud, inseguridad, estrés, ansiedad e incluso miedo \\
-Miedo & El miedo surge con la amenaza de daño, ya sea físico, emocional o psicológico. lógica, real o imaginaria. En el texto suele aparecer como una puesta de manifiesto de una amenaza hacia el autor del tweet o hacia lo que éste se refiere, en una situación donde se encuentra relativamente indefenso o en desequilibrio de poder. Puede ser también percibida como incertidumbre respecto al futuro. \\
+Miedo & El miedo surge ante amenazas reales o imaginarias de daño físico, emocional o psicológico. En textos, se muestra como amenazas hacia el autor del mensaje o lo que se menciona, cuando está vulnerable o en desventaja.  \\
 Asombro & La condición de estar asombrado; un estado de asombro abrumador, como por sorpresa o miedo repentino, horror o admiración.  \\
 Sorpresa & Se define como una reacción provocada por algo inesperado, extraño o novedoso para la persona. En el texto está principalmente asociada a resultados inesperados o descubrimientos singulares respecto al enunciado del tweet. \\
-Decepción & La decepción es el sentimiento de insatisfacción que sigue al fracaso de las expectativas o esperanzas de manifestarse. Similar al arrepentimiento, se diferencia en que una persona que se arrepiente se enfoca principalmente en las elecciones personales que contribuyeron a un mal resultado, mientras que una persona que se siente decepcionada se enfoca en el resultado mismo.Es una fuente de estrés psicológico. \\
-Tristeza & Esta emoción es una especie de dolor emocional o estado afectivo causado por la decadencia espiritual y que muchas veces se expresa en llanto, abatimiento, falta de apetito, cansancio, etc. Una persona puede sentirse triste cuando no se cumplen sus expectativas o cuando las circunstancias de la vida son más dolorosas que alegres. La emoción opuesta es la alegría.  \\
+Decepción & La decepción es la insatisfacción que sigue al fracaso de expectativas o esperanzas. A diferencia del arrepentimiento que se centra en elecciones personales, la decepción se enfoca en el resultado en sí. Puede generar estrés psicológico. \\
+Tristeza & La tristeza es un dolor emocional causado por decadencia espiritual, manifestándose en llanto, abatimiento, falta de apetito, cansancio, etc. Ocurre cuando las expectativas no se cumplen o las circunstancias son dolorosas.  \\
 Desagrado & Una actitud o un sentimiento de disgusto o aversión. \\
 Asco & Contiene una serie de estados con intensidades variables que van desde una leve aprensión hasta una intensa repulsión. Todos los estados de asco se desencadenan por la sensación de que algo es aversivo, repulsivo y/o tóxico.  \\
-Odio & El odio es una intensa respuesta emocional negativa hacia ciertas personas, cosas o ideas, generalmente relacionadas con la oposición o repulsión hacia algo. El odio a menudo se asocia con intensos sentimientos de ira, desprecio y disgusto. El odio a veces se ve como lo opuesto al amor. \\
-Ira & Esta emoción surge cuando se nos impide lograr un objetivo y/o se nos trata injustamente. En su forma más extrema, la ira puede ser una de las emociones más peligrosas debido a su potencial conexión con la violencia. En el texto, el autor está en tono retador o en líneas generales haciendo un reclamo por un derecho vulnerado o exigiendo algún tipo de justicia. \\
+Odio & El odio es una intensa respuesta emocional negativa hacia ciertas personas, cosas o ideas, generalmente relacionadas con la oposición o repulsión hacia algo. El odio a menudo se asocia con intensos sentimientos de ira, desprecio y disgusto. \\
+Ira & La ira surge por objetivos no alcanzados o trato injusto, pudiendo ser peligrosa y relacionada con la violencia. En el texto, el autor reta o reclama por un derecho vulnerado, buscando justicia. \\
 \end{longtable}
