--- a/Document/tables/trendings_clean.tex
+++ b/Document/tables/trendings_clean.tex
@@ -1,3 +1,4 @@
+
 \begin{longtable}{lllr}
 \caption{Hashtags} \label{table:hashtags} \\
 \toprule
@@ -10,7 +11,7 @@ date & trending & Sector & Count \\
 \midrule
 \endhead
 \midrule
-\multicolumn{4}{r}{Continued on next page} \\
+\multicolumn{4}{r}{Continua en la siguiente pagina} \\
 \midrule
 \endfoot
 \bottomrule
