--- a/Document/tables/tweets_ejemplos_1.tex
+++ b/Document/tables/tweets_ejemplos_1.tex
@@ -1,16 +1,15 @@
-\begin{table}
-\caption{Ejemplos de tweets con respecto a orientacion politica}
-\label{table:ejemplos_1}
-\begin{tabular}{{ | p{2cm} | p{13cm} |}}
-\toprule
-Numero de Ejemplo & Tweet \\
-\midrule
-1 & @lcvelez @lafm \#EstallidoSocialEs el arma de terror de Petro para obligar a votar por él. \\
-2 & Colombia va por el cambio, a redoblar esfuerzos estos 4 días para derrotar a la corrupción. \#PetroYFranciaSonElCambio \#EstallidoSocialEs \\
-3 & \#YaEsSuficiente Que los medios proclives al gbno, traten de darle aire boca a boca a un moribundo electoral, FICO. Ante su estancamiento en las encuestas y la distancia que le ha tomado Petro, pretenden en 1 acto de desesperacion, el insuflarlo de votantes de los cuales carece. \\
-4 & \#YaEsSuficiente de mentir sobre @ingrodolfohdez , vayan a bucaramanga, vean lo que hizo y ahí si hablen.. \\
-5 & \#LoPeorDeEstasElecciones es la división de la gente de este país esta gente y cosas ya que pasan \\
-6 & @Zuletalleras Son 4 años O es la. Derecha va realizar un golpe de estado? No cree a sus comentarios son ofensivos e incendiarios.... \#PetroEsPresidente \\
-\bottomrule
+\begin{table}[!htbp]
+\scriptsize
+\begin{tabular}{{ | p{1.5cm}| p{11cm} | p{1.5cm} |}}
+\hline
+Numero de Ejemplo & Tweet & Orientacion política \\
+\hline
+1 & @lcvelez @lafm \#EstallidoSocialEs el arma de terror de Petro para obligar a votar por él. & Derecha \\
+2 & Colombia va por el cambio, a redoblar esfuerzos estos 4 días para derrotar a la corrupción. \#PetroYFranciaSonElCambio \#EstallidoSocialEs & Derecha \\
+3 & \#YaEsSuficiente Que los medios proclives al gbno, traten de darle aire boca a boca a un moribundo electoral, FICO. Ante su estancamiento en las encuestas y la distancia que le ha tomado Petro, pretenden en 1 acto de desesperacion, el insuflarlo de votantes de los cuales carece. & Izquierda \\
+4 & \#YaEsSuficiente de mentir sobre @ingrodolfohdez , vayan a bucaramanga, vean lo que hizo y ahí si hablen.. & Izquierda \\
+\hline
 \end{tabular}
+\caption{Ejemplos de tweets clasificados}
+\label{table:ejemplos_1}
 \end{table}
