--- a/Document/tables/models_results.tex
+++ b/Document/tables/models_results.tex
@@ -1,17 +1,16 @@
 \begin{table}
-\caption{Metricas de los modelos entrenados}
-\label{table:model_results}
-\centering
-\begin{tabular}{llllll}
+\begin{tabular}{cccccc}
 \toprule
-Model & Media Micro F1 & Alegria & Miedo & Tristeza & Asco \\
+Model & Micro F1  & Alegria & Miedo & Tristeza & Asco \\
 \midrule
-bertin & 67.4 +- 23.8 & 81.5 & 0.0 & 0.0 & 85.2 \\
-beto & 79.1 +- 1.0 & 86.9 & 0.0 & 36.4 & 87.3 \\
-electricidad & 76.6 +- 1.3 & 82.5 & 0.0 & 0.0 & 84.6 \\
-roberta & 79.9 +- 0.4 & 87.3 & 0.0 & 12.5 & 87.4 \\
-robertuito & 83.9 +- 0.6 & 84.6 & 29.6 & 53.3 & 88.0 \\
-twitter-xlm & 79.2 +- 1.2 & 86.4 & 0.0 & 0.0 & 91.6 \\
+robertuito & 76.6±2.3 & 83.6±2.4 & 36.6±12.6 & 47.7±7.9 & 83.1±2.5 \\
+twitter-xlm & 72.8±2.7 & 80.8±3.5 & 27.1±9.7 & 43.5±10.6 & 80.8±2.0 \\
+roberta & 72.3±2.8 & 80.5±3.4 & 28.6±9.9 & 42.3±15.1 & 79.6±3.8 \\
+beto & 71.5±2.0 & 79.5±3.1 & 27.4±13.3 & 36.3±11.1 & 79.4±2.2 \\
+electricidad & 67.7±2.5 & 75.6±3.5 & 0.0±0.0 & 8.5±10.1 & 74.1±2.8 \\
+bertin & 46.4±20.5 & 40.6±35.8 & 1.8±4.3 & 3.3±8.0 & 57.7±17.5 \\
 \bottomrule
 \end{tabular}
+\caption{Metricas de los modelos entrenados}
+\label{table:model_results}
 \end{table}
